--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,8 @@
 asgiref==3.5.2
 Django==4.1.3
 django-autoslug==1.9.8
-django-braces==1.15.0
 django-cities-light==3.9.2
-django-crispy-forms==1.14.0
-django-filter==22.1
-django-model-utils==4.3.1
-django-multiselectfield==0.1.12
-django-pyodbc-azure==2.1.0.0
-django-ratings==0.3.7
+django-crispy-forms==1.14.0django-ratings==0.3.7
 django-star-ratings==0.9.2
 gunicorn==20.1.0
 progressbar2==4.2.0
