--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ asgiref==3.5.2
 Django==4.1.3
 django-autoslug==1.9.8
 django-cities-light==3.9.2
-django-crispy-forms==1.14.0django-ratings==0.3.7
+django-crispy-forms==1.14.0
+django-ratings==0.3.7
 django-star-ratings==0.9.2
 gunicorn==20.1.0
 progressbar2==4.2.0
